Ultimos cambios. Arraglamos Preguntas Aleatorias, Comodin cambiar pregunta y funcionalidad ocultar contraseña en oculto